# hello-glfw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.lua  hello.fs  hello.gs  hello.vs.glsl  main.cpp  testapplication.lua
cmake/modules/: FindCppFormat.cmake  FindFmt.cmake
shaders/: hello.fs.glsl  hello.gs.glsl  hello.vs.glsl  simple.geom  simple.vert
src/: ApplicationParameters.cpp  ApplicationParameters.h  Camera.cpp  Camera.h  CommandLineArguments.cpp  CommandLineArguments.h  Console.cpp  Console.h  Demo.cpp  Demo.h  File.cpp  File.h  LuaBindings.cpp  LuaBindings.h  Mesh.cpp  Mesh.h  ObjectInterface.h  Parameters.cpp  Parameters.h  Primitives.cpp  Primitives.h  RenderContext.cpp  RenderContext.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TestApplication.cpp  TestApplication.h  Timer.cpp  Timer.h  main.cpp
